--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
@@ -209,6 +209,7 @@
                                 </li>
 
                                 <li class="nav-item "><a class="nav-link" th:href="@{contract}">Contract</a></li>
+                                <li class="nav-item "><a class="nav-link" th:href="@{contractDetail}">Contract Detail</a></li>
 
                                 <li class="nav-item ">
                                     <a href="/collections/all" class="nav-link">
@@ -426,6 +427,7 @@
             }
         });
     </script>
+
 </section>
 
 </body>
