--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_detail_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/contract_detail_list.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
 
     <style>
@@ -51,26 +54,25 @@
                             </li>
                         </ul>
 
-                        <form class="d-flex"action="/resort/facility">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"name="id" th:value="${id}">
+                        <form class="d-flex"action="/contractDetail/">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </div>
                 </div>
             </nav>
-            <div class="container text-center m-5">
-                <a href="/resort/create" class="btn btn-outline-success">Create New Facility</a>
-            </div>
+<!--            <div class="container text-center m-5">-->
+<!--                <a href="/resort/create" class="btn btn-outline-success">Create New Facility</a>-->
+<!--            </div>-->
             <div class="container">
 
                 <table class="table table-dark table-striped">
                     <thead>
                     <tr>
                         <td>STT</td>
-                        <td>ID</td>
                         <td>QUANTITY</td>
                         <td>ATTACH FACILITY</td>
-                        <td>CONTRACT</td>
+                        <td>CUSTOMER NAME</td>
                         <td>edit</td>
                         <td>delete</td>
 
@@ -80,29 +82,34 @@
                     <thead>
                     <tr th:each="contractDetail, loop :  ${contractDetailList}">
                         <td th:text="${loop.count}"></td>
-                        <td th:text="${contractDetail.id}"></td>
                         <td th:text="${contractDetail.quantity}"></td>
                         <td th:text="${contractDetail.attachFacility.nameAttach}"></td>
                         <td th:text="${contractDetail.contract.customer.nameCustomer}"></td>
                         <td><a th:href="@{/contractDetail/{id}/edit(id=${contractDetail.getId()})}">
                             <button class="btn btn-success ">edit</button>
                         </a></td>
+                        <td><a th:href="@{/contractDetail/{id}/edit(id=${contractDetail.getId()})}">
+                            <button class="btn btn-success ">delete</button>
+                        </a></td>
                     </tr>
                     </thead>
                     </tbody>
                 </table>
                 <div>
-                    <a th:if="${contractDetailList.hasPrevious()}"
-                       th:href="@{/contractDetail/(page=${contractDetailList.number - 1} , id= ${id})}">
-                        <button>Previous</button>
-                    </a>
-                    <span th:text="${contractDetailList.number +1}"></span>
-                    /
-                    <span th:text="${contractDetailList.totalPages}"></span>
-                    <a th:if="${contractDetailList.hasNext()}"
-                       th:href="@{/contractDetail/(page=${contractDetailList.number + 1} , id= ${id})}">
-                        <button>next</button>
-                    </a>
+                    <h3>
+                        <a th:if="${contractDetailList.hasPrevious()}"
+                           th:href="@{/contractDetail/(page=${contractDetailList.number - 1} )}">
+                            <i  style="color: black" class="fa-solid fa-backward"></i>
+                        </a>
+                        <span th:text="${contractDetailList.number +1}"></span>
+                        /
+                        <span th:text="${contractDetailList.totalPages}"></span>
+                        <a th:if="${contractDetailList.hasNext()}"
+                           th:href="@{/contractDetail/(page=${contractDetailList.number + 1} )}">
+                            <i style="color: black" class="fa-solid fa-forward"></i>
+                        </a>
+                    </h3>
+
                 </div>
 
             </div>
