--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_list.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/customer_list.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
     <th:block th:replace="~{common-html :: bootstrapCss}"></th:block>
 
     <style>
@@ -95,7 +97,7 @@
                             <td th:text="${customer.email}"></td>
                             <td th:text="${customer.address}"></td>
                             <td th:text="${customer.customerType.nameCustomerType}"></td>
-                            <td><a th:href="@{/customer/{id}/edit(id=${customer.id})}">
+                            <td><a th:href="@{/customer/{id}/edit(id=${customer.getId()})}">
                                 <button class="btn btn-success ">edit</button></a>
                             </td>
                             <td>
@@ -137,17 +139,20 @@
                 </div>
 
                 <div>
-                    <a th:if="${customerList.hasPrevious()}"
-                       th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">
-                        <button>Previous</button>
-                    </a>
-                    <span th:text="${customerList.number +1}"></span>
-                    /
-                    <span th:text="${customerList.totalPages}"></span>
-                    <a th:if="${customerList.hasNext()}"
-                       th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">
-                        <button>next</button>
-                    </a>
+                    <h3>
+                        <a th:if="${customerList.hasPrevious()}"
+                           th:href="@{/customer/(page=${customerList.number - 1} , keyword= ${keywordVal})}">
+                            <i  style="color: black" class="fa-solid fa-backward"></i>
+                        </a>
+                        <span th:text="${customerList.number +1}"></span>
+                        /
+                        <span th:text="${customerList.totalPages}"></span>
+                        <a th:if="${customerList.hasNext()}"
+                           th:href="@{/customer/(page=${customerList.number + 1} , keyword= ${keywordVal})}">
+                            <i style="color: black" class="fa-solid fa-forward"></i>
+                        </a>
+                    </h3>
+
                 </div>
 
             </div>
